# jeo

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
colabs/: index.html
configs/: index.html
conventions/: index.html
datasets/: index.html
docs/: colabs.md  configs.md  conventions.md  datasets.md  evaluators.md  faq.md  index.md  launching.md  models.md  new_project.md  pp.md  starter.md  tasks.md
evaluators/: index.html
faq/: index.html
jeo/: __init__.py  checkpointing.py  input_pipeline.py  train.py  train_utils.py
jeo/colabs/: quickstart_oss.ipynb
jeo/components/: early_stopping.py  mixup.py  positional_embeddings.py  positional_embeddings_test.py  transformers.py
jeo/configs/: config_utils.py
jeo/configs/tests/: bit_i1k.py  tiny_bit.py  tiny_vit.py
jeo/evaluators/: builder.py  classification.py  semantic_segmentation.py  utils.py
jeo/losses/: __init__.py  losses.py  losses_test.py
jeo/metrics/: clu_metrics.py  clu_metrics_builder.py  clu_metrics_test.py  metrics.py
jeo/models/: bit.py  mtsvit.py  swin_v2.py  vit.py
jeo/pp/: bv_ops.py  bv_ops_test.py  decode_ops.py  decode_ops_test.py  image_ops.py  image_ops_test.py  pp_builder.py  pp_ops.py  pp_ops_test.py  pp_utils.py  pp_utils_test.py  rand_det_ops.py  rand_det_ops_test.py  randaug_geo.py  randaug_geo_test.py  sat_ops.py  sat_ops_test.py
jeo/tasks/: classification.py  segmentation.py  task_builder.py
jeo/tests/: train_test.py  train_utils_test.py
jeo/tests/components/: positional_embeddings_test.py
jeo/tests/losses/: losses_test.py
jeo/tests/metrics/: clu_metrics_test.py
jeo/tests/tools/: inspect_test.py
jeo/tools/: bv_optax.py  bv_utils.py  checkpointing.py  decorators.py  decorators_test.py  geeflow_utils.py  inspect.py  inspect_test.py  metric_writers.py  restore.py  tree_utils.py  vis.py
launching/: index.html
models/: index.html
new_project/: index.html
pp/: index.html
search/: search_index.json
starter/: index.html
tasks/: index.html
