[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "jeo"
description = "Tasks, datasets and models for remote sensing and Earth observation in Jax."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="DeepMind Technologies Limited"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
    "absl-py",
    "clu",
    "einops",
    "flax",
    "jax",
    "ml_collections",
    "numpy>=1.26",
    "optax",
    "scipy",
    "scikit-learn",
    "tensorflow",
    "tensorflow_datasets",
]

# `version` is automatically set by flit to use `jeo.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-deepmind/jeo"
repository = "https://github.com/google-deepmind/jeo"
changelog = "https://github.com/google-deepmind/jeo/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

# Installed through `pip install '.[docs]'`.
docs = [
    # Install `apitree` with all extensions (sphinx, theme,...)
    "sphinx-apitree[ext]",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI.
  "**/*_test.py",
]
